syntax = "proto3";

package spacet.v1;

option go_package = "gen/go/spacet/v1";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

// SpaceT service definition
service SpaceTService {
  rpc LaunchBooking(BookingRequest) returns (Ticket) {
    option (google.api.http) = {
      post: "/v1/bookings"
      body: "*"
    };
  };

  rpc CancelBooking(TicketID) returns (TicketID){
    option (google.api.http) = {
      delete: "/v1/bookings/{id}"
    };
  };

  rpc ListBookings(ListBookingsRequest) returns (ListBookingsResponse) {
    option (google.api.http) = {
      get: "/v1/bookings"
    };
  };
}


// Message definitions

message Booking {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  Gender gender = 4; 
  google.protobuf.Timestamp birthday = 5;
  string launchpad_id = 6;
  google.protobuf.Timestamp launch_date = 7;
}

message Ticket {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string launchpad_id = 5;
  google.protobuf.Timestamp launch_date = 4;
}

message TicketID {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

enum Gender {
    UNSPECIFIED = 0; // user might not want to provide this info
    MALE = 1;
    FEMALE = 2;
    NON_BINARY = 3;
    OTHER = 4;
}

// Request payloads

message BookingRequest {
  string first_name = 1 [(buf.validate.field).string = {
    min_len: 3;
    max_len: 25
  }];
  string last_name = 2 [(buf.validate.field).string = {
    min_len: 3;
    max_len: 25
  }];
  Gender gender = 3; 
  google.protobuf.Timestamp birthday = 4 [(buf.validate.field).timestamp.lt_now = true];  // must be in the past
  string launchpad_id = 5;
  google.protobuf.Timestamp launch_date = 6 [(buf.validate.field).timestamp.gt_now = true];  // must be in the future
}


message ListBookingsRequest {
  // pagination
  int32 limit = 1 [(buf.validate.field).int32.gte = 1];
  optional string cursor = 2;

  // filters
  optional string first_name = 3 [(buf.validate.field).string.min_len = 3]; 
  optional string last_name = 4 [(buf.validate.field).string.min_len = 3]; 
  optional Gender gender = 5; 
  optional google.protobuf.Timestamp launch_date = 6; 
  optional string launchpad_id = 7;
}

message ListBookingsResponse {
  repeated Booking bookings = 1;
  string next_cursor = 2;
}